--- a/NgWalks.Api/appsettings.json
+++ b/NgWalks.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbCon": "Server = Kenneth;Database=NGWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
