Commit all changes

--- a/NgWalks.Api/appsettings.json
+++ b/NgWalks.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbCon": "Server = Kenneth;Database=NGWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "djscnasjnx123SKASJJNJ-2@@8U4DNJDJk",
+    "Issuer": "https://localhost:7032",
+    "Audience": "https://localhost:7032"
   }
 }
