--- a/NgWalks.Api/appsettings.json
+++ b/NgWalks.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbCon": "Server = Kenneth;Database=NGWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DbCon": "Server = Kenneth;Database=NGWalksDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "DbConAuth": "Server = Kenneth;Database=NGWalksAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "djscnasjnx123SKASJJNJ-2@@8U4DNJDJk",
